# sast-music

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  icon.icns  qml.qrc  res.qrc  sast_music.qrc
.cmake/: InstallerScript.iss.in  version_dll.rc.in  version_exe.rc.in
.github/workflows/: cpp-linter.yml  macos.yaml  ubuntu.yaml  windows.yaml
src/: main.cpp
src/Model/: PlayList.h  Song.h  SongLyric.h  UserProfile.h
src/Service/: PersistentCookieJar.cpp  PersistentCookieJar.h
src/Service/NeteaseCloudMusic/: CloudMusicClient.cpp  CloudMusicClient.h  Deserializer.hpp  MusicLevel.h  SearchType.h
src/Service/NeteaseCloudMusic/Encryption/: EApi.hpp  Encryption.cpp  Encryption.hpp  WeApi.hpp
src/Service/NeteaseCloudMusic/Response/: AccountInfoEntity.h  AccoutInfoEntity.h  AlbumInfoEntity.h  ArtistInfoEntity.h  BasicDef.h  DailySongsEntity.h  LoginQRCodeEntity.h  LoginQRCodePollingEntity.h  LoginStatusEntity.h  ManyPlaylistEntity.h  ManySongInfoEntity.h  ManySongUrlInfoEntity.h  PlaylistDetailEntity.h  PlaylistEntity.h  ProfileInfoEntity.h  SearchResultEntity.h  SongInfoEntity.h  SongLyricEntity.h  SongUrlInfoEntity.h  SubscriptionCountEntity.h  TrackIdEntity.h  VersionedLyricEntity.h
src/Utility/: CookieUtils.cpp  CookieUtils.h  EncryptionUtils.cpp  EncryptionUtils.h  MusicPlayer.cpp  MusicPlayer.h  NeteaseCloudMusic  RandomUtils.cpp  RandomUtils.h  Result.hpp  SettingsUtils.cpp  SettingsUtils.h  Tools.cpp  Tools.h
src/ViewModel/: LikedSongViewModel.cpp  LikedSongViewModel.h  LoginViewModel.cpp  LoginViewModel.h  NextUpViewModel.cpp  NextUpViewModel.h  OutputDeviceViewModel.cpp  OutputDeviceViewModel.h  PlayListViewModel.cpp  PlayListViewModel.h  PlayingSongViewModel.cpp  PlayingSongViewModel.h  SongLyricViewModel.cpp  SongLyricViewModel.h  SongViewModel.cpp  SongViewModel.h  UserProfileViewModel.cpp  UserProfileViewModel.h  UserViewModel.cpp  UserViewModel.h  VolumeViewModel.cpp  VolumeViewModel.h
ui/: MainWindow.qml  main.qml
ui/component/: Blur.qml  BlurRectangle.qml  Clip.qml  ComboBox.qml  IconButton.qml  LyricLine.qml  MusicFullscreenInfo.qml  MusicSlider.qml  RadiusMenu.qml  RadiusMenuItem.qml  ScrollablePage.qml  SearchBox.qml  TextButton.qml  ToggleSwitch.qml
ui/item/: LyricBlock.qml  LyricsRect.qml  MusicBlock.qml  NavigationBar.qml  PlayListCover.qml  PlayerBar.qml  SystemTray.qml
ui/page/: Explore.qml  Home.qml  Library.qml  LikedSongs.qml  Login.qml  NextUp.qml  PlayList.qml  PrivateRadar.qml  Settings.qml  SongListInfo.qml  T_explore.qml  T_home.qml  T_library.qml  T_palyList.qml  T_searchResult.qml  T_settings.qml
